syntax = "proto3";
import "google/protobuf/empty.proto";
package namely.examples.company;

service CompanyService {
  rpc CreateCompany(CreateCompanyRequest) returns (Company) {}
  rpc GetCompany(GetCompanyRequest) returns (Company) {}
  rpc SetCompanyCeo(SetCompanyCeoRequest) returns (google.protobuf.Empty) {}
}

message Address {
  string address1 = 1;
  string address2 = 2;
  string zip = 3;
  string state = 4;
}

message Company {
  string company_uuid = 1;
  Address office_location = 2;
  string ceo_employee_uuid = 3;
}

message CreateCompanyRequest { Company company = 1; }

message GetCompanyRequest { string company_uuid = 1; }

message SetCompanyCeoRequest {
  string company_uuid = 1;
  string ceo_employee_uuid = 2;
}
